--- a/src/fields/fft_poisson_solver/fft/CMakeLists.txt
+++ b/src/fields/fft_poisson_solver/fft/CMakeLists.txt
@@ -1,12 +1,12 @@
-if (HiPACE_COMPUTE STREQUAL CUDA)
-  target_sources(HiPACE
+if (Hipace_COMPUTE STREQUAL CUDA)
+  target_sources(Hipace
     PRIVATE
         WrapCuFFT.cpp
         WrapCuDST.cpp
         CuFFTUtils.cpp
   )
 else()
-  target_sources(HiPACE
+  target_sources(Hipace
     PRIVATE
         WrapFFTW.cpp
         WrapDSTW.cpp
