--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -53,7 +53,7 @@ jobs:
 #      run: |
 #        mkdir build
 #        cd build
-#        cmake .. -DHiPACE_MPI=OFF
+#        cmake .. -DHipace_MPI=OFF
 #        make -j 2 VERBOSE=ON
 #        ctest --output-on-failure
 
@@ -88,7 +88,7 @@ jobs:
 #        mkdir build
 #        cd build
 #        cmake ..                                      \
-#            -DHiPACE_COMPUTE=CUDA                     \
+#            -DHipace_COMPUTE=CUDA                     \
 #            -DCMAKE_C_COMPILER=$(which gcc-8)         \
 #            -DCMAKE_CXX_COMPILER=$(which g++-8)       \
 #            -DCMAKE_CUDA_HOST_COMPILER=$(which g++-8) \
