--- a/.github/workflows/source.yml
+++ b/.github/workflows/source.yml
@@ -1,6 +1,6 @@
 # Copyright 2020 Axel Huebl, Maxence Thevenet
 #
-# This file is part of Hipace++.
+# This file is part of HiPACE++.
 #
 # License: BSD-3-Clause-LBNL
 
