--- a/src/fields/fft_poisson_solver/fft/CMakeLists.txt
+++ b/src/fields/fft_poisson_solver/fft/CMakeLists.txt
@@ -5,6 +5,11 @@ if (HiPACE_COMPUTE STREQUAL CUDA)
         WrapCuDST.cpp
         CuFFTUtils.cpp
   )
+elif (HiPACE_COMPUTE STREQUAL HIP)
+  target_sources(HiPACE
+      PRIVATE
+        WrapRocFFT.cpp
+  )
 else()
   target_sources(HiPACE
     PRIVATE
