added WrapRocDST.cpp to CMakeLists.txt

--- a/src/fields/fft_poisson_solver/fft/CMakeLists.txt
+++ b/src/fields/fft_poisson_solver/fft/CMakeLists.txt
@@ -9,6 +9,7 @@ elif (HiPACE_COMPUTE STREQUAL HIP)
   target_sources(HiPACE
       PRIVATE
         WrapRocFFT.cpp
+        WrapRocDST.cpp
   )
 else()
   target_sources(HiPACE
