corrected conditional in CMakeLists.txt

--- a/src/fields/fft_poisson_solver/fft/CMakeLists.txt
+++ b/src/fields/fft_poisson_solver/fft/CMakeLists.txt
@@ -5,7 +5,7 @@ if (HiPACE_COMPUTE STREQUAL CUDA)
         WrapCuDST.cpp
         CuFFTUtils.cpp
   )
-elif (HiPACE_COMPUTE STREQUAL HIP)
+elseif (HiPACE_COMPUTE STREQUAL HIP)
   target_sources(HiPACE
       PRIVATE
         WrapRocFFT.cpp
