--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -37,9 +37,11 @@ jobs:
         mkdir build
         cd build
         cmake ..                                   \
+            -DHiPACE_COMPUTE=OMP                   \
             -DCMAKE_INSTALL_PREFIX=/tmp/my-hipace  \
             -DCMAKE_CXX_STANDARD=17
         make -j 2 VERBOSE=ON
+        export OMP_NUM_THREADS=2
         ctest --output-on-failure
 
 #  linux_gcc_cxx14:
