make OpenMP default compute instead of NOACC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,7 +57,7 @@ if(NOT HiPACE_PRECISION IN_LIST HiPACE_PRECISION_VALUES)
 endif()
 
 set(HiPACE_COMPUTE_VALUES NOACC CUDA SYCL HIP OMP)
-set(HiPACE_COMPUTE NOACC CACHE STRING
+set(HiPACE_COMPUTE OMP CACHE STRING
     "On-node, accelerated computing backend (NOACC/CUDA/SYCL/HIP/OMP)")
 set_property(CACHE HiPACE_COMPUTE PROPERTY STRINGS ${HiPACE_COMPUTE_VALUES})
 if(NOT HiPACE_COMPUTE IN_LIST HiPACE_COMPUTE_VALUES)
