--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,8 @@
 sphinx_rtd_theme>=0.4.0
 recommonmark
 sphinx>=3.0
+# docutils 0.17 breaks HTML tags & RTD theme
+# https://github.com/sphinx-doc/sphinx/issues/9001
+docutils<=0.16
 pygments
 breathe
