Docs: Tagfile (Doxygen)
Interlink the HiPACE++ Doxygen with the AMReX Doxygen pages.

Also generate a HiPACE++ tagfile. Used as an anchor in external projects.

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,10 @@ spack-build*
 build/
 debug/
 __pycache__
+
+# Sphinx
+docs/amrex-doxygen-web.tag.xml
+docs/hipace-doxygen-web.tag.xml
+docs/doxyhtml/
+docs/doxyxml/
+docs/source/_static/
