--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@
 *.out
 *.app
 
-# Temporaries from editors 
+# Temporaries from editors
 *~
 
 # IDEs
@@ -48,6 +48,9 @@ spack-build*
 build/
 debug/
 __pycache__
+.ftpconfig
+.ftpignore
+ignore/
 
 # Sphinx
 docs/amrex-doxygen-web.tag.xml
