--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -8,8 +8,8 @@ on:
 jobs:
 # enable again when we open-source (free core-hours for GH Actions)
 #
-#  linux_gcc_cxx14_ompi:
-#    name: GNU@7.5 C++14 OMPI
+#  linux_gcc_cxx17_ompi:
+#    name: GNU@7.5 C++17 OMPI
 #    runs-on: ubuntu-latest
 #    steps:
 #    - uses: actions/checkout@v2
@@ -44,8 +44,8 @@ jobs:
         export OMP_NUM_THREADS=2
         ctest --output-on-failure
 
-#  linux_gcc_cxx14:
-#    name: GNU@7.5 C++14 Serial
+#  linux_gcc_cxx17:
+#    name: GNU@7.5 C++17 Serial
 #    runs-on: ubuntu-latest
 #    steps:
 #    - uses: actions/checkout@v2
@@ -61,8 +61,8 @@ jobs:
 
 # enable again when we open-source (free core-hours for GH Actions)
 #
-#  linux_clang_cxx14:
-#    name: Clang@4.0.1 C++14 OMPI
+#  linux_clang7:
+#    name: Clang@7 C++17 OMPI
 #    runs-on: ubuntu-latest
 #    steps:
 #    - uses: actions/checkout@v2
@@ -72,8 +72,8 @@ jobs:
 #      run: |
 #        mkdir build
 #        cd build
-#        cmake ..                                             \
-#            -DCMAKE_C_COMPILER=$(which clang-4.0)            \
-#            -DCMAKE_CXX_COMPILER=$(which clang++-4.0)
+#        cmake ..                                           \
+#            -DCMAKE_C_COMPILER=$(which clang-7)            \
+#            -DCMAKE_CXX_COMPILER=$(which clang++-7)
 #        make -j 2 VERBOSE=ON
 #        ctest --output-on-failure
