fix error in CMake file

--- a/src/particles/pusher/CMakeLists.txt
+++ b/src/particles/pusher/CMakeLists.txt
@@ -1,16 +1,5 @@
 target_sources(HiPACE
   PRIVATE
-    BeamParticleContainer.cpp
-    BeamParticleContainerInit.cpp
-    PlasmaParticleContainer.cpp
-    PlasmaParticleContainerInit.cpp
-    SliceSort.cpp
-    TileSort.cpp
-    BoxSort.cpp
-    MultiBeam.cpp
-    MultiPlasma.cpp
+    PlasmaParticleAdvance.cpp
+    BeamParticleAdvance.cpp
 )
-
-add_subdirectory(deposition)
-add_subdirectory(pusher)
-add_subdirectory(profiles)
