--- a/.github/workflows/cuda.yml
+++ b/.github/workflows/cuda.yml
@@ -26,9 +26,24 @@ jobs:
       CXXFLAGS: "-Werror"
     steps:
     - uses: actions/checkout@v2
+
     - name: install dependencies
       run: |
         .github/workflows/setup/nvcc11.sh
+
+    - name: CCache Cache
+      uses: actions/cache@v2
+      # - once stored under a key, they become immutable (even if local cache path content changes)
+      # - for a refresh the key has to change, e.g., hash of a tracked file in the key
+      with:
+        path: |
+          ~/.ccache
+          ~/.cache/ccache
+        key: ccache-cuda-nvcc-${{ hashFiles('.github/workflows/cuda.yml') }}-${{ hashFiles('cmake/dependencies/AMReX.cmake') }}
+        restore-keys: |
+          ccache-cuda-nvcc-${{ hashFiles('.github/workflows/cuda.yml') }}-
+          ccache-cuda-nvcc-
+
     - name: Build & Install
       run: |
         export PATH=/usr/local/nvidia/bin:/usr/local/cuda/bin:${PATH}
