--- a/.github/workflows/hip.yml
+++ b/.github/workflows/hip.yml
@@ -17,9 +17,24 @@ jobs:
     env: {CXXFLAGS: "-Wno-deprecated-declarations -Wno-error=pass-failed"}
     steps:
     - uses: actions/checkout@v2
+
     - name: install dependencies
       shell: bash
       run: .github/workflows/setup/hip.sh
+
+    - name: CCache Cache
+      uses: actions/cache@v2
+      # - once stored under a key, they become immutable (even if local cache path content changes)
+      # - for a refresh the key has to change, e.g., hash of a tracked file in the key
+      with:
+        path: |
+          ~/.ccache
+          ~/.cache/ccache
+        key: ccache-hip-clang-${{ hashFiles('.github/workflows/hip.yml') }}-${{ hashFiles('cmake/dependencies/AMReX.cmake') }}
+        restore-keys: |
+          ccache-hip-clang-${{ hashFiles('.github/workflows/hip.yml') }}-
+          ccache-hip-clang-
+
     - name: build HiPACE
       shell: bash
       run: |
