--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -13,25 +13,6 @@ on:
       - development
 
 jobs:
-# enable again when we open-source (free core-hours for GH Actions)
-#
-#  linux_gcc_cxx17_ompi:
-#    name: GNU@7.5 C++17 OMPI
-#    runs-on: ubuntu-latest
-#    steps:
-#    - uses: actions/checkout@v2
-#    - name: Dependencies
-#      run: .github/workflows/setup/ubuntu_ompi.sh
-#    - name: Build & Install
-#      run: |
-#        mkdir build
-#        cd build
-#        cmake ..                                   \
-#            -DCMAKE_INSTALL_PREFIX=/tmp/my-hipace
-#        make -j 2 VERBOSE=ON
-#        ctest --output-on-failure
-#        make install
-
   linux_gcc_cxx17_omp_ompi:
     name: GNU@7.5 C++17 OMP OMPI
     runs-on: ubuntu-latest
@@ -39,6 +20,18 @@ jobs:
     - uses: actions/checkout@v2
     - name: Dependencies
       run: .github/workflows/setup/ubuntu_ompi.sh
+    - name: CCache Cache
+      uses: actions/cache@v2
+      # - once stored under a key, they become immutable (even if local cache path content changes)
+      # - for a refresh the key has to change, e.g., hash of a tracked file in the key
+      with:
+        path: |
+          ~/.ccache
+          ~/.cache/ccache
+        key: ccache-linux-gccompompi-${{ hashFiles('.github/workflows/linux.yml') }}-${{ hashFiles('cmake/dependencies/AMReX.cmake') }}
+        restore-keys: |
+          ccache-linux-gccompompi-${{ hashFiles('.github/workflows/linux.yml') }}-
+          ccache-linux-gccompompi-
     - name: Build & Install
       run: |
         mkdir build
@@ -58,6 +51,18 @@ jobs:
     - uses: actions/checkout@v2
     - name: Dependencies
       run: .github/workflows/setup/ubuntu.sh
+    - name: CCache Cache
+      uses: actions/cache@v2
+      # - once stored under a key, they become immutable (even if local cache path content changes)
+      # - for a refresh the key has to change, e.g., hash of a tracked file in the key
+      with:
+        path: |
+          ~/.ccache
+          ~/.cache/ccache
+        key: ccache-linux-gccnompi-${{ hashFiles('.github/workflows/linux.yml') }}-${{ hashFiles('cmake/dependencies/AMReX.cmake') }}
+        restore-keys: |
+          ccache-linux-gccnompi-${{ hashFiles('.github/workflows/linux.yml') }}-
+          ccache-linux-gccnompi-
     - name: Build & Install
       run: |
         mkdir build
