--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,3 +16,4 @@ add_subdirectory(fields)
 add_subdirectory(particles)
 add_subdirectory(utils)
 add_subdirectory(diagnostics)
+add_subdirectory(mg_solver)
