--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -13,59 +13,65 @@ on:
       - development
 
 jobs:
-# enable again when we open-source (free core-hours for GH Actions)
-#
-#  linux_gcc_cxx17_ompi:
-#    name: GNU@7.5 C++17 OMPI
-#    runs-on: ubuntu-latest
-#    steps:
-#    - uses: actions/checkout@v2
-#    - name: Dependencies
-#      run: .github/workflows/setup/ubuntu_ompi.sh
-#    - name: Build & Install
-#      run: |
-#        mkdir build
-#        cd build
-#        cmake ..                                   \
-#            -DCMAKE_INSTALL_PREFIX=/tmp/my-hipace
-#        make -j 2 VERBOSE=ON
-#        ctest --output-on-failure
-#        make install
-
   linux_gcc_cxx17_omp_ompi:
     name: GNU@7.5 C++17 OMP OMPI
     runs-on: ubuntu-latest
+    env: {OMP_NUM_THREADS: 2}
     steps:
     - uses: actions/checkout@v2
     - name: Dependencies
       run: .github/workflows/setup/ubuntu_ompi.sh
+    - name: CCache Cache
+      uses: actions/cache@v2
+      # - once stored under a key, they become immutable (even if local cache path content changes)
+      # - for a refresh the key has to change, e.g., hash of a tracked file in the key
+      with:
+        path: |
+          ~/.ccache
+          ~/.cache/ccache
+        key: ccache-linux-gccompompi-${{ hashFiles('.github/workflows/linux.yml') }}-${{ hashFiles('cmake/dependencies/AMReX.cmake') }}
+        restore-keys: |
+          ccache-linux-gccompompi-${{ hashFiles('.github/workflows/linux.yml') }}-
+          ccache-linux-gccompompi-
     - name: Build & Install
       run: |
-        mkdir build
-        cd build
-        cmake ..                                   \
+        cmake -S . -B build                        \
             -DHiPACE_COMPUTE=OMP                   \
+            -DCMAKE_CXX_STANDARD=17                \
             -DCMAKE_INSTALL_PREFIX=/tmp/my-hipace  \
-            -DCMAKE_CXX_STANDARD=17
-        make -j 2 VERBOSE=ON
-        export OMP_NUM_THREADS=2
-        ctest --output-on-failure
+            -DCMAKE_VERBOSE_MAKEFILE=ON
+        cmake --build build -j 2
+    - name: Run Tests
+      run: ctest --test-dir build --output-on-failure
 
   linux_gcc_cxx17:
     name: GNU@7.5 C++17 Serial
     runs-on: ubuntu-latest
+    env: {OMP_NUM_THREADS: 2}
     steps:
     - uses: actions/checkout@v2
     - name: Dependencies
       run: .github/workflows/setup/ubuntu.sh
+    - name: CCache Cache
+      uses: actions/cache@v2
+      # - once stored under a key, they become immutable (even if local cache path content changes)
+      # - for a refresh the key has to change, e.g., hash of a tracked file in the key
+      with:
+        path: |
+          ~/.ccache
+          ~/.cache/ccache
+        key: ccache-linux-gccnompi-${{ hashFiles('.github/workflows/linux.yml') }}-${{ hashFiles('cmake/dependencies/AMReX.cmake') }}
+        restore-keys: |
+          ccache-linux-gccnompi-${{ hashFiles('.github/workflows/linux.yml') }}-
+          ccache-linux-gccnompi-
     - name: Build & Install
       run: |
-        mkdir build
-        cd build
-        cmake .. -DHiPACE_MPI=OFF
-        make -j 2 VERBOSE=ON
-        export OMP_NUM_THREADS=2
-        ctest --output-on-failure
+        cmake -S . -B build             \
+            -DHiPACE_MPI=OFF            \
+            -DCMAKE_VERBOSE_MAKEFILE=ON
+        cmake --build build -j 2
+    - name: Run Tests
+      run: ctest --test-dir build --output-on-failure
 
 # enable again when we open-source (free core-hours for GH Actions)
 #
