--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,3 +17,4 @@ add_subdirectory(fields)
 add_subdirectory(particles)
 add_subdirectory(utils)
 add_subdirectory(diagnostics)
+add_subdirectory(mg_solver)
