Laser envelope: static laser (#641)
* init laser

* add laser term to particle push

* add laser to plasma deposition

* add laser to explicit solve

* fixing term of a squared

* change laser definition

* fix explicit solver with laser for linear wakes

* fix laser in explicit solver

* move laser term outside of charge_mass_ratio

* change back the force terms, to add CI test at correct state

* add laser CI test in blowout regime

* move laser from utils/ to laser/

* remove unused parameter

* allocate laser only when used

* fix no memory usage without laser

* fix ponderomotive force

* change input parameters to W0, L0, and tau

* fix documentation

* improve sphinx doc

* add missed CMakeLists file

* cleaning

* remove white space

* avoid assertion for no laser

* remove redundant lo

* add axels suggestions

* fix SI units

* add correct scaling for ions

* set up CI test for laser + SI units

* improve description of SI test

* add new laser + SI benchmark

* reset benchmark because current fix in explicit solver was merged from development

* Apply suggestions from code review

Co-authored-by: Maxence Thévenet <maxence.thevenet@desy.de>

* minor cleaning

* remove redundant arrays and calculate on the fly

* constify

* decapitalize W0

* reset benchmark because derivative of a in laser init neglected guard cells

* reduce temporary parameters stored

* Apply suggestions from code review

Co-authored-by: Maxence Thévenet <maxence.thevenet@desy.de>

Co-authored-by: Tools <hipace.tools@desy.de>
Co-authored-by: Maxence Thévenet <maxence.thevenet@desy.de>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,7 @@ target_sources(HiPACE
 
 add_subdirectory(fields)
 add_subdirectory(particles)
+add_subdirectory(laser)
 add_subdirectory(utils)
 add_subdirectory(diagnostics)
 add_subdirectory(mg_solver)
