add CI test for ion motion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -243,6 +243,12 @@ if(BUILD_TESTING)
         #         WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
         #)
 
+        add_test(NAME ion_motion.SI.1Rank
+                 COMMAND ${HiPACE_SOURCE_DIR}/tests/ion_motion.SI.1Rank.sh
+                         $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
+                 WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+        )
+
         add_test(NAME ionization.2Rank
                  COMMAND ${HiPACE_SOURCE_DIR}/tests/ionization.2Rank.sh
                          $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
