--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -387,6 +387,11 @@ if(BUILD_TESTING)
                  WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
         )
 
+        add_test(NAME laser_evolution.SI.2Rank
+                 COMMAND ${HiPACE_SOURCE_DIR}/tests/laser_evolution.SI.2Rank.sh
+                         $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
+                 WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+        )
     endif()
 endif()
 
