--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,3 +19,4 @@ add_subdirectory(laser)
 add_subdirectory(utils)
 add_subdirectory(diagnostics)
 add_subdirectory(mg_solver)
+add_subdirectory(salame)
