Add leapfrog pusher for plasma (#847)
* leapfrog pusher

* Add second order using DualNumber Autodiff

* include new header

* add second gather

* test with second gather

* remove force terms

* fix salame

* fix periodic issue

* leapfrog pusher with ab5 option

* Push after ionization and collisions

* fix missing variable

* fix missing variable

* push psi instead of psi_inv

* Add support for collisions and ionization

* make leapfrog pusher the default

* Make AB5 pusher default and reset CI for reasons mentioned above

* Reset production SI benchmark manually ☹

* Add pusher printout

* add suggestions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,13 @@ set_default_install_dirs()
 option(HiPACE_MPI            "Multi-node support (message-passing)"       ON)
 option(HiPACE_OPENPMD        "openPMD I/O (HDF5, ADIOS)"                  ON)
 
+set(HiPACE_PUSHER_VALUES LEAPFROG AB5)
+set(HiPACE_PUSHER AB5 CACHE STRING "Plasma pusher (AB5/LEAPFROG)")
+set_property(CACHE HiPACE_PUSHER PROPERTY STRINGS ${HiPACE_PUSHER_VALUES})
+if(NOT HiPACE_PUSHER IN_LIST HiPACE_PUSHER_VALUES)
+    message(FATAL_ERROR "HiPACE_PUSHER (${HiPACE_PUSHER}) must be one of ${HiPACE_PUSHER_VALUES}")
+endif()
+
 set(HiPACE_PRECISION_VALUES SINGLE DOUBLE)
 set(HiPACE_PRECISION DOUBLE CACHE STRING "Floating point precision (SINGLE/DOUBLE)")
 set_property(CACHE HiPACE_PRECISION PROPERTY STRINGS ${HiPACE_PRECISION_VALUES})
@@ -153,6 +160,10 @@ endif()
 if(HiPACE_OPENPMD)
     target_compile_definitions(HiPACE PUBLIC HIPACE_USE_OPENPMD)
     target_link_libraries(HiPACE PUBLIC openPMD::openPMD)
+endif()
+
+if(HiPACE_PUSHER STREQUAL "AB5")
+    target_compile_definitions(HiPACE PUBLIC HIPACE_USE_AB5_PUSH)
 endif()
 
 if(AMReX_LINEAR_SOLVERS)
