--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -56,7 +56,7 @@ jobs:
         restore-keys: |
           ccache-macos-appleclang-${{ hashFiles('.github/workflows/macos.yml') }}-
           ccache-macos-appleclang-
-    - name: build ImpactX
+    - name: build HiPACE++
       run: |
         cmake -S . -B build_dp          \
           -DCMAKE_VERBOSE_MAKEFILE=ON   \
@@ -69,7 +69,7 @@ jobs:
           -DHiPACE_PRECISION=SINGLE
         cmake --build build_sp -j 2
 
-    - name: test ImpactX
+    - name: test HiPACE++
       run: |
         ctest --test-dir build_dp --output-on-failure
         ctest --test-dir build_sp --output-on-failure
