--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -46,6 +46,7 @@ jobs:
         set -e
         brew tap openpmd/openpmd
         brew install openpmd-api
+        python -m pip install matplotlib
     - name: CCache Cache
       uses: actions/cache@v3
       # - once stored under a key, they become immutable (even if local cache path content changes)
