--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -47,6 +47,7 @@ jobs:
         brew tap openpmd/openpmd
         brew install openpmd-api
         python -m pip install matplotlib
+        python -m pip install numpy
     - name: CCache Cache
       uses: actions/cache@v3
       # - once stored under a key, they become immutable (even if local cache path content changes)
