--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -48,6 +48,7 @@ jobs:
         brew install openpmd-api
         python3 -m pip install matplotlib
         python3 -m pip install numpy
+        python3 -m pip install scipy
     - name: CCache Cache
       uses: actions/cache@v3
       # - once stored under a key, they become immutable (even if local cache path content changes)
