--- a/.github/workflows/local_gpu.yml
+++ b/.github/workflows/local_gpu.yml
@@ -5,7 +5,7 @@
 # Authors: Axel Huebl, Maxence Thevenet
 # License: BSD-3-Clause-LBNL
 
-name: 🐧 CUDA
+name: 🐧 local CUDA
 
 on: [push, pull_request]
 
@@ -19,7 +19,7 @@ jobs:
 #   https://github.com/ComputationalRadiationPhysics/picongpu/blob/0.5.0/share/picongpu/dockerfiles/ubuntu-1604/Dockerfile
 #   https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/
   build_nvcc:
-    name: NVCC 11.8 SP
+    name: NVCC 11.8 DP
     runs-on: gpu-runner-pilot
     if: github.event.pull_request.draft == false
     env:
