--- a/.github/workflows/local_gpu.yml
+++ b/.github/workflows/local_gpu.yml
@@ -19,7 +19,7 @@ jobs:
 #   https://github.com/ComputationalRadiationPhysics/picongpu/blob/0.5.0/share/picongpu/dockerfiles/ubuntu-1604/Dockerfile
 #   https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/
   build_nvcc:
-    name: NVCC 11.8 DP
+    name: NVCC 11.1 DP
     runs-on: self-hosted
     if: github.event.pull_request.draft == false
     env:
@@ -27,34 +27,20 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-#    - name: install dependencies
-#      run: |
-#        .github/workflows/setup/nvcc11.sh
-
-#    - name: CCache Cache
-#      uses: actions/cache@v2
-#      # - once stored under a key, they become immutable (even if local cache path content changes)
-#      # - for a refresh the key has to change, e.g., hash of a tracked file in the key
-#      with:
-#        path: |
-#          ~/.ccache
-#          ~/.cache/ccache
-#        key: ccache-cuda-nvcc-${{ hashFiles('.github/workflows/cuda.yml') }}-${{ hashFiles('cmake/dependencies/AMReX.cmake') }}
-#        restore-keys: |
-#          ccache-cuda-nvcc-${{ hashFiles('.github/workflows/cuda.yml') }}-
-#          ccache-cuda-nvcc-
-
     - name: Build & Install
       run: |
-        export PATH=/usr/local/nvidia/bin:/usr/local/cuda/bin:${PATH}
-        export LD_LIBRARY_PATH=/usr/local/nvidia/lib:/usr/local/nvidia/lib64:/usr/local/cuda/lib64:${LD_LIBRARY_PATH}
+        source $HOME/profile.hipace
+        # export PATH=/usr/local/nvidia/bin:/usr/local/cuda/bin:${PATH}
+        # export LD_LIBRARY_PATH=/usr/local/nvidia/lib:/usr/local/nvidia/lib64:/usr/local/cuda/lib64:${LD_LIBRARY_PATH}
         which nvcc || echo "nvcc not in PATH!"
 
         cmake -S . -B build            \
           -DCMAKE_VERBOSE_MAKEFILE=ON  \
           -DAMReX_CUDA_ARCH=7.0        \
           -DHiPACE_COMPUTE=CUDA        \
-          -DHiPACE_PRECISION=SINGLE    \
+          -DHiPACE_PRECISION=DOUBLE    \
           -DAMReX_CUDA_ERROR_CROSS_EXECUTION_SPACE_CALL=ON \
           -DAMReX_CUDA_ERROR_CAPTURE_THIS=ON
-        cmake --build build -j 2
+        cmake --build build -j 4
+    - name: Run Tests
+      run: ctest --test-dir build --output-on-failure
