--- a/.github/workflows/local_gpu.yml
+++ b/.github/workflows/local_gpu.yml
@@ -45,4 +45,5 @@ jobs:
     - name: Run Tests
       run: |
         source $HOME/profile.hipace
+        conda activate openpmd
         ctest --test-dir build --output-on-failure
